-
Bug
-
Resolution: Fixed
-
P1: Critical
-
5.15.7, 6.2.1, 6.3
-
8d848811dc (qt/tqtc-qtdeclarative/5.15)
Instantiating the following component leaks a lot of memory, in particular property caches:
import QtQml import QtTest QtObject { id: mouseArea property SignalSpy spy: SignalSpy { signalName: "onObjectNameChanged" target: mouseArea } }
If you switch the property assignments, no memory leaks:
import QtQml import QtTest QtObject { id: mouseArea property SignalSpy spy: SignalSpy { target: mouseArea signalName: "onObjectNameChanged" } }